--- a/src/css/controls/flags/ads.less
+++ b/src/css/controls/flags/ads.less
@@ -43,6 +43,7 @@
             .jw-knob,
             .jw-buffer,
             .jw-cue,
+            .jw-comment,
             .jw-icon-settings {
                 display: none;
             }
