--- a/src/css/shared-imports/vars.less
+++ b/src/css/shared-imports/vars.less
@@ -32,6 +32,7 @@
 @option-inactive-color: @inactive-color;
 @option-active-color: @active-color;
 @option-active-bg-color: fade(@white, 10%);
+@comment-color: rgba(200, 50, 50, 1);
 
 @rail-color: fade(@white, 30%);
 @buffer-color: fade(@white, 30%);
