--- a/src/css/controls/imports/tooltip.less
+++ b/src/css/controls/imports/tooltip.less
@@ -48,6 +48,15 @@
         min-width: 100%;
         vertical-align: middle;
     }
+
+    .jw-comment-author {
+        font-weight: bold;
+        padding: (@tooltip-arrow-size / 2) (@tooltip-font-size / 2);
+    }
+
+    .jw-comment-author:empty {
+        display: none;
+    }
 }
 
 .jw-controlbar {
